updated gradle, update libs,  verified they still work correctly.